--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 		<meta charset="utf-8">
 		<title>I'm Mariia Shumova</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300&display=swap" rel="stylesheet">
-		<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@700&display=swap&text=&HIIMJULAOCENDSG'" rel="stylesheet">
+		<meta name="description" content="Mariia Shumova">
 		<link rel="stylesheet" href="style.css">
 	</head>
 	<body class="page">
