--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 		<meta charset="utf-8">
 		<title>I'm Mariia Shumova</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta name="description" content="Mariia Shumova">
+		<meta name="description" content="MARIIA SHUMOVA RESPONSIVE WEB DESIGN & WEB PERFORMANCE">
 		<link rel="stylesheet" href="style.css">
 	</head>
 	<body class="page">
 		<div class="page__intro">
-			<video class="page__video" autoplay muted loop data-video>
+			<video class="page__video" autoplay muted loop playsinline preload="yes">
 				<source src="./bg-video/bg-video.mp4" type="video/mp4">
 				<source src="./bg-video/bg-video.webm" type="video/webm">
 			</video>
@@ -31,7 +31,7 @@
 					<a href="https://www.linkedin.com/in/shumova-mariia" target="_blank">Connect on&nbsp;Linkedin</a>
 				</li>
 				<li>
-					<a href="https://github.com/shumova" target="_blank">My&nbsp;study projects at&nbsp;GitHub</a>
+					<a href="https://github.com/shumova" target="_blank">My&nbsp;GitHub</a>
 				</li>
 				<li>
 					<a href="./Resume-Mariia-Shumova.pdf">Download my&nbsp;CV</a>
