--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 
 		<div class="page__content">
 			<div class="page__text">
-				<p>I&rsquo;m a&nbsp;novice specialist in&nbsp;Front-end Development. I&nbsp;carry out my&nbsp;work properly and with responsibility because&nbsp;I really like all things to&nbsp;be&nbsp;done well. I&nbsp;develop actively my&nbsp;professional hard and soft skills and enjoy of&nbsp;making accessible websites and better user experience, with attention to&nbsp;every single detail.</p>
-				<p> Currently I&nbsp;am a&nbsp;Front-end Developer Intern&nbsp;at <a href="https://ligaa.agency/" target="_blank">Liga&nbsp;A</a> digital agency with a&nbsp;high-quality Web development standards and well-established processes of&nbsp;work. I&nbsp;take a&nbsp;part in&nbsp;commercial projects with responsibility for website components and tasks entrusted to&nbsp;me.</p>
+				<p>I&rsquo;m a&nbsp;novice specialist in&nbsp;Front-end Development. I&nbsp;carry out my&nbsp;work properly and with responsibility because&nbsp;I really like all things to&nbsp;be&nbsp;done well. I&nbsp;actively develop my&nbsp;professional hard and soft skills and enjoy making accessible websites with high quality of&nbsp;user experience across all platforms, with attention to&nbsp;every single detail.</p>
+				<p>Currently I&nbsp;am a&nbsp;Front-end Developer Intern&nbsp;at <a href="https://ligaa.agency/" target="_blank">Liga&nbsp;A</a> digital agency. I&nbsp;am a&nbsp;member of&nbsp;the developer team with high-quality Web development standards and well-established processes of&nbsp;work. I&nbsp;take part in&nbsp;commercial projects with responsibility for website components and tasks entrusted to&nbsp;me.</p>
 			</div>
 			<ul class="page__links">
 				<li>
