--- a/index.html
+++ b/index.html
@@ -41,10 +41,9 @@
               <p>Currently based in Spain.</p>
             </div>
             <div class="video">
-              <video class="video__media" width="1436" height="831" autoplay muted playsinline preload poster="img/my-video-poster.jpg">
+              <video class="video__media" width="1436" height="831" autoplay muted playsinline preload="metadata" poster="img/my-video-poster.jpg">
                 <source src="video/my-video.mp4" type="video/mp4">
                 <source src="video/my-video.webm" type="video/webm">
-                <p class="video__notice">Your browser does not support embedded videos.</p>
               </video>
             </div>
           </div>
