--- a/index.html
+++ b/index.html
@@ -40,11 +40,24 @@
               <p>I&rsquo;m making the world better by&nbsp;building high-fidelity web interfaces, which are equally friendly for customers, developers and search engines. I&nbsp;have a&nbsp;passion for web standards and keep abreast of&nbsp;new developments in&nbsp;the industry, interested in&nbsp;how the latest things and smartest companies work.</p>
               <p>Currently based in Spain.</p>
             </div>
-            <div class="video">
-              <video class="video__media" width="1436" height="831" autoplay muted playsinline preload="metadata" poster="img/my-video-poster.jpg">
+            <div class="video" data-video-container>
+              <video class="video__media" width="1436" height="831" muted playsinline preload="metadata" data-video>
                 <source src="video/my-video.mp4" type="video/mp4">
                 <source src="video/my-video.webm" type="video/webm">
               </video>
+              <div class="video__poster" data-video-poster>
+                <picture>      
+                  <source 
+                    type="image/webp" 
+                    srcset="img/my-video-poster.webp, img/my-video-poster@2x.webp 2x">
+                  <img 
+                    src="img/my-video-poster.jpg"
+                    srcset="img/my-video-poster@2x.jpg 2x" 
+                    width="1436" 
+                    height="831" 
+                    alt="Looking at the sea.">
+                </picture>
+              </div>
             </div>
           </div>
         </section>
