--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
               <p>I&rsquo;m making the world better by&nbsp;building high-fidelity web interfaces, which are equally friendly for customers, developers and search engines. I&nbsp;have a&nbsp;passion for web standards and keep abreast of&nbsp;new developments in&nbsp;the industry, interested in&nbsp;how the latest things and smartest companies work.</p>
               <p>Currently based in Spain.</p>
             </div>
-            <div class="video" data-video-container>
-              <video class="video__media" width="1436" height="831" muted playsinline preload="metadata" data-video>
+            <div class="video" data-video>
+              <video class="video__media" width="1436" height="831" muted playsinline preload="metadata" data-video-media>
                 <source src="video/my-video.mp4" type="video/mp4">
                 <source src="video/my-video.webm" type="video/webm">
               </video>
@@ -81,5 +81,6 @@
         </div>
       </footer>
     </div>
+    <script src="main.js"></script>
   </body>
 </html>
