--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
               <a class="contacts__link link" href="https://www.linkedin.com/in/shumova-mariia" target="_blank">connect <br>on&nbsp;Linkedin</a>
             </li>
             <li class="contacts__item">
-              <a class="contacts__link link" href="https://github.com/shumova" target="_blank">welcome <br>to&nbsp;my&nbsp;GitHubb</a>
+              <a class="contacts__link link" href="https://github.com/shumova" target="_blank">welcome <br>to&nbsp;my&nbsp;GitHub</a>
             </li>
             <li class="contacts__item">
-              <a class="contacts__link link" href="./Resume-Mariia-Shumova.pdf">download <br>my&nbsp;CV</a>
+              <a class="contacts__link link" href="./files/Resume-Mariia-Shumova.pdf">download <br>my&nbsp;CV</a>
             </li>
             <li class="contacts__item">
               <a class="contacts__link link" href="mailto:shumova.mariia@gmail.com" target="_blank">write <br>me&nbsp;an&nbsp;email</a>
