--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <div class="container">
             <div class="intro__text">
               <h1>Hey there, I'm Mariia Shumova.</h1>
-              <p>I&rsquo;m making the world better by&nbsp;building high-fidelity web interfaces, which are equally friendly for customers, developers and search engines. I&nbsp;have a&nbsp;passion for web standards and keep abreast of&nbsp;new developments in&nbsp;the industry, interested in&nbsp;how the latest things and smartest companies work.</p>
+              <p>I&rsquo;m making the world better by&nbsp;building high-fidelity web interfaces, which are equally friendly for customers, developers and search engines. I&nbsp;have a&nbsp;passion for web standards and keep abreast of&nbsp;new developments in&nbsp;the industry, interested in&nbsp;how the latest things and the smartest companies work.</p>
               <p>Currently based in Spain.</p>
             </div>
             <div class="video" data-video>
