--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@
             <div class="intro__text">
               <h1>Hey there, I'm Mariia Shumova.</h1>
               <p>I&rsquo;m making the world better by&nbsp;building high-fidelity web interfaces, which are equally friendly for customers, developers and search engines. I&nbsp;have a&nbsp;passion for web standards and keep abreast of&nbsp;new developments in&nbsp;the industry, interested in&nbsp;how the latest things and the smartest companies work.</p>
-              <p>Currently based in Spain.</p>
             </div>
             <div class="video" data-video>
               <video class="video__media" width="1436" height="831" muted playsinline preload="metadata" data-video-media>
@@ -72,7 +71,7 @@
               <a class="contacts__link link" href="https://github.com/shumova" target="_blank">welcome <br>to&nbsp;my&nbsp;GitHub</a>
             </li>
             <li class="contacts__item">
-              <a class="contacts__link link" href="./files/Resume-Mariia-Shumova.pdf">download <br>my&nbsp;CV</a>
+              <a class="contacts__link link" href="https://resume.io/r/CibjtnJI1">download <br>my&nbsp;CV</a>
             </li>
             <li class="contacts__item">
               <a class="contacts__link link" href="mailto:shumova.mariia@gmail.com" target="_blank">write <br>me&nbsp;an&nbsp;email</a>
